--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@ button {
 
 a {
     text-decoration: none;
+    color: #000000;
 }
 
 
@@ -200,7 +201,6 @@ nav h1 {
 
 nav a.login-link {
     font-size: 18px;
-    color: #000000;
     font-weight: bold;
 }
 
@@ -237,19 +237,18 @@ main aside div {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    /* border: 2px solid red; */
     height: 500px;
     padding: var(--blog-primary-padding);
 }
 
 main aside div p.button-p {
-    color: red;
     font-size: 18px;
     font-weight: bolder;
     color: #1f2839;
 }
 
-button.btn {
+button.btn,
+button.sort {
     color: #1f2839;
     font-size: 16px;
     background-color: whitesmoke;
@@ -261,26 +260,39 @@ button.btn {
     padding: 0.4rem 1rem 0.4rem 1rem;
 }
 
-button.btn.active {
-    background-color: var(--blog-primary-color);
-}
-
-button.btn:hover {
+button.btn:hover,
+button.sort:hover {
     background-color: var(--blog-primary-color);
     cursor: pointer;
 }
 
-/* Section Blog Grid Styling */
+/* Section Blog Grid Styling ********/
 section.blog-grid {
-    display: grid;
+    display: flex;
     width: 60%;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1rem;
-    margin: 0.7rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 300ms ease;
+    margin: 1rem;
+}
+
+section.blog-grid.sort {
+    flex-direction: column-reverse;
+}
+
+span:after {
+    content: 'Newest to oldest';
+}
+
+span.change:after {
+    content: 'Oldest to newest';
 }
 
 div.item {
     width: 360px;
+    margin: 0.333rem;
+    transition: transform 400ms ease;
 }
 
 div.item img {
@@ -307,7 +319,6 @@ div.blog-title p {
     padding: 0.33rem;
 }
 
-
 p.blog-p {
     color: var(--blog-primary-text-color);
     font-size: 18px;
@@ -316,7 +327,6 @@ p.blog-p {
 }
 
 /* Add MOBILE SCREEN MEDIA QUERIES */
-
 @media (max-width: 600px) {
     main {
         display: flex;
