--- a/css/style.css
+++ b/css/style.css
@@ -1,145 +1,3 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-img,
-iframe {
-    vertical-align: bottom;
-    max-width: 100%;
-}
-
-input,
-textarea,
-select {
-    font: inherit;
-}
-
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -147,7 +5,9 @@ select {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
-    line-height: 1.5;
+    line-height: 1.4;
+    margin: 0;
+    padding: 0;
 }
 
 /* CSS VARIABLES */
@@ -183,36 +43,39 @@ body {
     color: #1f2839;
 }
 
-/* Navigation Bar Styling */
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: var(--blog-primary-padding);
-    padding-right: var(--blog-primary-padding);
-    padding-top: 0.7rem;
-    background-color: var(--blog-primary-color);
-}
-
-nav h1 {
-    font-size: 24px;
-    font-weight: bolder;
-}
-
-nav a.login-link {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-/* Header Styling ******/
+/* Header Styling **********************/
 header {
     background-color: var(--blog-primary-color);
     padding: var(--blog-primary-padding);
-    height: 60vh;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-header h1 {
-    font-weight: bolder;
+/* SVG Settings ***/
+img.logo {
+    width: 150px;
+    height: 150px;
+}
+
+img.svg-n {
+    width: 60px;
+    height: 60px;
+    margin: 0.3rem;
+}
+
+img.svg-n:hover {
+    cursor: pointer;
+}
+
+div.info-div {
+    width: 60%;
+}
+
+p.p-header {
+    text-align: center;
+    font-weight: bold;
 }
 
 /* Main Section Styling *****/
