--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
-    line-height: 1.4;
+    line-height: 1.5;
     margin: 0;
     padding: 0;
 }
@@ -48,16 +48,17 @@ body {
 header {
     background-color: var(--blog-primary-color);
     padding: var(--blog-primary-padding);
-    height: 40vh;
+    height: 30vh;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 /* SVG Settings ***/
 img.logo {
     width: 150px;
     height: 150px;
+    object-fit: contain;
 }
 
 img.logo:hover {
@@ -65,8 +66,9 @@ img.logo:hover {
 }
 
 img.svg-n {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
     margin: 0.3rem;
 }
 
@@ -91,7 +93,6 @@ main aside {
     height: 100%;
     position: sticky;
     top: 0;
-    left: 0;
     width: 25%;
 }
 
@@ -102,7 +103,7 @@ main aside div {
     justify-content: space-around;
     align-items: flex-start;
     height: 500px;
-    padding: var(--blog-primary-padding);
+    /* padding: var(--blog-primary-padding); */
 }
 
 main aside div p.button-p {
@@ -113,11 +114,11 @@ main aside div p.button-p {
 
 button.btn,
 button.sort {
+    background-color: whitesmoke;
     color: #1f2839;
     font-size: 16px;
-    background-color: whitesmoke;
     transition: background-color 300ms ease-in-out;
-    width: 100%;
+    width: 70%;
     text-align: left;
     border-radius: 5px;
     font-weight: bold;
@@ -134,10 +135,11 @@ button.sort:hover {
 section.blog-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     width: 60%;
     padding: 1rem;
     gap: 1rem;
+    margin: 2rem;
 }
 
 section.blog-grid.sort {
@@ -152,7 +154,7 @@ span.change:after {
     content: 'Oldest to newest';
 }
 
-/********** Post Card styling ******/
+/********** Post Card styling ********/
 div.item {
     transition: transform 400ms ease;
 }
@@ -163,6 +165,7 @@ div.item:hover {
 
 div.item img {
     width: 100%;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -191,16 +194,20 @@ p.blog-p {
     color: var(--blog-third-color);
 }
 
+/* Custom Heights */
+.cosy {
+    height: 300px;
+}
+
 /* LOGIN.html page styles ************************/
 section.form-section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    height: 90vh;
 }
 
 form.admin-form {
-    border: 2px solid red;
     padding: 1rem;
     min-height: 400px;
     width: 500px;
@@ -209,8 +216,6 @@ form.admin-form {
     justify-content: space-evenly;
     align-items: center;
     box-shadow: 0px 4px 6px 0 hsla(0, 0%, 0%, 0.2);
-    border: 0.5px solid black;
-    border-radius: 5px;
 }
 
 label {
@@ -220,9 +225,9 @@ label {
 
 input[type="text"] {
     border: none;
-    background-color: var(--blog-primary-color);
+    background-color: white;
     padding: 0.4rem 0 0.4rem 0;
-    border-radius: 10px;
+    border-radius: 3px;
     font-size: 18px;
     margin: 0.4rem;
 }
@@ -240,25 +245,24 @@ input[type="submit"]:hover {
     cursor: pointer;
 }
 
-
 /************ Footer styling ***************/
 footer {
-    background-color: #3E68B1;
+    background-color: var(--blog-primary-color);
     min-height: 160px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 footer a.f-link {
     font-size: 1.33rem;
-    color: white;
+    color: black;
     font-weight: bolder;
     margin: 0.7rem;
 }
 
 .newsletter {
-    color: white;
+    color: b, acm;
 }
 
 /* Add MOBILE SCREEN MEDIA QUERIES */
