--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ label {
 
 input[type="text"] {
     border: none;
-    background-color: white;
+    background-color: whitesmoke;
     padding: 0.4rem 0 0.4rem 0;
     border-radius: 3px;
     font-size: 18px;
