--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,9 @@ span.change:after {
 /********** Post Card styling ********/
 div.item {
     transition: transform 400ms ease;
+    box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+    padding: 1rem;
+    background-color: white;
 }
 
 div.item:hover {
@@ -221,6 +224,7 @@ div.blog-title {
     font-weight: bolder;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #ccc;
 }
 
 div.blog-title h2,
