--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ main aside {
     top: 30%;
     right: 0%;
     padding: 1.333rem;
-    transition: transform 300ms ease;
+    transition: transform 400ms cubic-bezier(0.65, 0.05, 0.36, 1);
     transform: translate(90%);
     background-color: var(--blog-secondary-text-color);
     box-shadow: 0px 4px 20px 0 hsla(0, 0%, 0%, 0.2);
@@ -266,7 +266,8 @@ form.admin-form {
 }
 
 label {
-    font-size: 24px;
+    font-size: 18px;
+    margin-left: 10px;
     font-weight: bolder;
 }
 
@@ -291,6 +292,7 @@ input[type="submit"] {
 input[type="submit"]:hover {
     cursor: pointer;
 }
+
 
 /************ Footer styling ***************/
 footer {
