--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,6 @@ section.article-nav {
     font-weight: 700;
 }
 
-
 p.last-p {
     border-bottom: 1px solid #ccc;
 }
@@ -319,6 +318,7 @@ footer a.f-link {
     color: var(--blog-primary-text-color);
     font-weight: 700;
     margin: 0.7rem;
+    text-decoration: none;
 }
 
 /************* Modal Styling **************/
