--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,12 @@ section.about p {
     margin-top: 0.7rem;
 }
 
+.about-pic {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
 /* LOGIN.html page styles ************************/
 section.form-section {
     display: flex;
