--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,6 @@ button {
     margin: 0;
 }
 
-a {
-    text-decoration: none;
-    color: #000000;
-}
-
 ul {
     list-style-type: none;
 }
@@ -89,12 +84,12 @@ main {
 main aside {
     position: fixed;
     top: 30%;
-    right: 0%;
-    padding: 1.333rem;
-    transition: transform 400ms cubic-bezier(0.65, 0.05, 0.36, 1);
+    right: 0;
+    padding: 0.77rem;
     transform: translate3d(90%, 0, 0);
     background-color: var(--blog-secondary-text-color);
-    box-shadow: 0px 4px 10px 0 hsla(0, 0%, 0%, 0.2);
+    box-shadow: 0px 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+    transition: transform 400ms cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 main aside:hover {
@@ -119,13 +114,8 @@ main aside article {
     z-index: 4;
 }
 
-main aside article:hover {
-    background-color: rgb(52, 86, 157);
-}
-
 h5.aside-h5 {
     font-size: 1.333rem;
-    z-index: 4;
 }
 
 /* MAIN Aside Div *************************/
@@ -134,28 +124,21 @@ main aside div {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    padding: 1.333rem;
+    padding: 0.7rem;
     background-color: var(--blog-secondary-text-color);
-}
-
-main aside div p.button-p {
-    font-size: 24px;
-    font-weight: bolder;
-    color: #1f2839;
 }
 
 button.btn,
 button.sort {
     background-color: var(--blog-secondary-color);
-    color: #1f2839;
+    color: var(--blog-primary-text-color);
     font-size: 18px;
-    transition: background-color 300ms ease-in-out;
-    width: 70%;
     text-align: left;
     border-radius: 5px;
     font-weight: bold;
     padding: 0.4rem 1rem 0.4rem 1rem;
-    margin: 0.4rem;
+    margin: 0.7rem;
+    transition: background-color 300ms ease-in-out;
 }
 
 button.btn:hover,
@@ -168,11 +151,12 @@ button.sort:hover {
 section.blog-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
+    grid-auto-rows: repeat(3, 1fr);
     width: 60%;
     padding: 1rem;
     gap: 2rem;
 }
+
 
 section.blog-grid.sort {
     flex-direction: column-reverse;
@@ -194,10 +178,6 @@ article.item {
     background-color: var(--blog-secondary-text-color);
 }
 
-article.item:hover {
-    cursor: pointer;
-}
-
 article.item img {
     background-size: cover;
     background-position: 50% 50%;
@@ -205,10 +185,14 @@ article.item img {
     width: 100%;
 }
 
+article.item:hover {
+    cursor: pointer;
+}
+
 div.blog-title {
     display: flex;
     margin-top: 0.8rem;
-    font-weight: bolder;
+    font-weight: 700;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ccc;
@@ -229,6 +213,69 @@ blockquote.blog-p {
     font-size: 18px;
     font-weight: 400;
     color: var(--blog-third-color);
+    margin-bottom: 0.7rem;
+}
+
+a#article-a {
+    text-decoration: none;
+    border: 2px solid black;
+    padding: 0.4rem 1rem 0.4rem 1rem;
+    margin-top: 0.7rem;
+    color: var(--blog-third-color);
+}
+
+/****************************** Whole Article ************/
+section.whole-article {
+    margin: 2rem auto;
+    width: 60%;
+}
+
+section.whole-article figure {
+    height: 500px;
+    width: 100%;
+}
+
+section.whole-article figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section.article-nav {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.33rem;
+    font-weight: 700;
+}
+
+p.last-p {
+    border-bottom: 1px solid #ccc;
+}
+
+p.comment-p {
+    margin-bottom: 1rem;
+}
+
+textarea {
+    width: 100%;
+    font-size: 1.1rem;
+}
+
+
+/*ABOUT.html**********************/
+section.about {
+    margin: 2rem auto;
+    width: 60%;
+}
+
+section.about p {
+    margin-top: 0.7rem;
+}
+
+.about-pic {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
 }
 
 /* LOGIN.html page styles ************************/
@@ -248,22 +295,12 @@ form.admin-form {
     justify-content: space-evenly;
     align-items: center;
     box-shadow: 0px 4px 6px 0 hsla(0, 0%, 0%, 0.2);
-    /* add the following */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 label {
     font-size: 18px;
     margin-left: 10px;
-    font-weight: bolder;
-}
-
-label {
-    font-size: 18px;
-    margin-left: 10px;
-    font-weight: bolder;
+    font-weight: 700;
 }
 
 input[type="text"] {
@@ -291,7 +328,7 @@ input[type="submit"]:hover {
 /************ Footer styling ***************/
 footer {
     background-color: var(--blog-primary-color);
-    min-height: 160px;
+    min-height: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -300,8 +337,9 @@ footer {
 footer a.f-link {
     font-size: 1.33rem;
     color: var(--blog-primary-text-color);
-    font-weight: bolder;
+    font-weight: 700;
     margin: 0.7rem;
+    text-decoration: none;
 }
 
 /************* Modal Styling **************/
@@ -330,7 +368,6 @@ section.modal {
     height: 100vh;
     overflow-x: hidden;
     background-color: white;
-    width: 100%;
     z-index: 0;
     display: flex;
     flex-direction: column;
@@ -346,15 +383,14 @@ section.modal.active {
 }
 
 section.modal h1 {
-    text-align: center;
-    font-size: 1.77rem;
+    font-size: 1.6rem;
 }
 
 section.modal article.blog-article {
     display: grid;
     grid-template-columns: 1fr;
     margin-top: 1rem;
-    width: 60%;
+    width: 50%;
     overflow-y: scroll;
 }
 
@@ -379,18 +415,11 @@ article figure.article-figure img:first-child {
     z-index: 1;
 }
 
-/* Button Modal Section */
-section.btn-section {
-    padding: 1rem;
-    display: flex;
-    justify-content: space-around;
-}
-
 button.btn-m {
-    padding: 0.2rem 1.3rem 0.2rem 1.3rem;
+    padding: 0.3rem 1.3rem 0.3rem 1.3rem;
     font-weight: 700;
     font-size: 14px;
-    margin: 0.9rem;
+    margin: 1rem;
     border-radius: 3px;
 }
 
@@ -407,32 +436,3 @@ p.article-p {
 
 /* Add MOBILE SCREEN MEDIA QUERIES */
 @media (max-width: 600px) {}
-
-
-
-
-.comments-section {
-    margin-top: 2rem;
-    padding: 1rem;
-    width: 500px;
-    box-shadow: 0px 4px 6px 0 hsla(0, 0%, 0%, 0.2);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* add the following */
-    margin-top: 2rem;
-}
-
-.comments-section h2 {
-    margin-top: 0;
-    margin-bottom: 1rem; /* added to give some space between h2 and comments */
-}
-
-.comment {
-    margin-bottom: 1rem;
-    padding: 1rem;
-    background-color: #f7f7f7;
-    box-shadow: 0px 2px 4px 0 hsla(0, 0%, 0%, 0.2);
-    width: 100%; /* added to make the comments take the full width */
-}
