--- a/css/style.css
+++ b/css/style.css
@@ -185,10 +185,6 @@ article.item img {
     width: 100%;
 }
 
-article.item:hover {
-    cursor: pointer;
-}
-
 div.blog-title {
     display: flex;
     margin-top: 0.8rem;
@@ -261,30 +257,15 @@ textarea {
     font-size: 1.1rem;
 }
 
-
-/*ABOUT.html**********************/
-section.about {
-    margin: 2rem auto;
-    width: 60%;
-}
-
-section.about p {
-    margin-top: 0.7rem;
-}
-
-.about-pic {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-}
-
 /* LOGIN.html page styles ************************/
 section.form-section {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 90vh;
 }
+
 
 form.admin-form {
     padding: 1rem;
@@ -296,13 +277,27 @@ form.admin-form {
     align-items: center;
     box-shadow: 0px 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.success-message{
+    color: green;
+    font-size: 14px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 10px
+}
 
 label {
     font-size: 18px;
     margin-left: 10px;
     font-weight: 700;
 }
-
+input[type="password"],
 input[type="text"] {
     border: none;
     background-color: var(--blog-secondary-color);
@@ -436,3 +431,4 @@ p.article-p {
 
 /* Add MOBILE SCREEN MEDIA QUERIES */
 @media (max-width: 600px) {}
+
