--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ form.admin-form {
     align-items: center;
     box-shadow: 0px 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
+
 .error-message {
     color: red;
     font-size: 14px;
@@ -284,7 +285,7 @@ form.admin-form {
     margin-top: 10px;
 }
 
-.success-message{
+.success-message {
     color: green;
     font-size: 14px;
     margin-bottom: 10px;
@@ -297,6 +298,7 @@ label {
     margin-left: 10px;
     font-weight: 700;
 }
+
 input[type="password"],
 input[type="text"] {
     border: none;
@@ -400,6 +402,17 @@ article.blog-article img {
     will-change: transform;
 }
 
+/* This is the loggin delete button css classes */
+/* .active class means user has logged in and it will be added in PHP */
+button.btn-delete.active {
+    display: block;
+}
+
+button.btn-delete {
+    display: none;
+}
+
+
 /* Modal Image container */
 article figure.article-figure {
     position: relative;
@@ -431,4 +444,3 @@ p.article-p {
 
 /* Add MOBILE SCREEN MEDIA QUERIES */
 @media (max-width: 600px) {}
-
