input validation stuff
directory cleaned up, hopefully not broken

cookies fixed maybe

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ form.admin-form {
     font-size: 14px;
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-left: 10px
 }
 
 .success-message {
